--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "@mantine/form": "^7.17.0",
     "@mantine/hooks": "7.17.0",
     "@mantinex/mantine-logo": "^1.1.0",
+    "@tabler/icons-react": "^3.30.0",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.3",
-    "dayjs": "^1.11.13"
+    "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
