--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
-    "@mantine/core": "7.17.0",
-    "@mantine/dates": "^7.17.0",
-    "@mantine/form": "^7.17.0",
-    "@mantine/hooks": "7.17.0",
-    "@mantine/notifications": "^7.17.0",
-    "@mantinex/mantine-logo": "^1.1.0",
-    "@tabler/icons-react": "^3.30.0",
-    "axios": "^1.7.9",
-    "dayjs": "^1.11.13",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.3"
+    "@mantine/core": "7.17.1",
+    "@mantine/dates": "7.17.1",
+    "@mantine/form": "7.17.1",
+    "@mantine/hooks": "7.17.1",
+    "@mantine/notifications": "7.17.1",
+    "@mantinex/mantine-logo": "1.1.0",
+    "@tabler/icons-react": "3.30.0",
+    "axios": "1.7.9",
+    "dayjs": "1.11.13",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-router-dom": "7.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
